--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ a:hover {
     border: 1px solid var(--border);
     border-radius: var(--r-xl);
     padding: 10px 14px;
+    margin-bottom: 15px;
     box-shadow: var(--shadow-md);
     backdrop-filter: blur(10px) saturate(140%)
 }
@@ -1253,6 +1254,7 @@ input[type="number"] {
         --h: 30px;
         /* sedikit lebih pendek juga supaya proporsional */
     }
+
 
 
 }
